# fly_ruler

./: .gitignore  1.py  Cargo.toml  README.md  control_pb2.py  core_output_pb2.py  plot.ipynb  state_extend_pb2.py  state_pb2.py
LSE/: .gitignore  algorithm.lua  config.lua  control.lua  csv.lua  draw.py  integrator.lua  lse.lua  main.lua  wingslevel.lua
config/: core_init.toml
crates/engines/light_simulation_engine/: Cargo.toml  README.md
crates/engines/light_simulation_engine/src/: lib.rs  system.rs
crates/engines/light_simulation_engine/src/manager/: plugin.rs
crates/engines/universal_simulation_engine/: Cargo.toml  config.lua
crates/engines/universal_simulation_engine/src/: handler.rs  lib.rs  lua.rs  main.rs  system.rs  utils.rs
crates/engines/universal_simulation_engine/src/manager/: model.rs  plugin.rs
crates/libs/lib_codec/: Cargo.toml  build.rs
crates/libs/lib_codec/src/: frame.rs  json.rs  lib.rs  model.rs  proto.rs
crates/libs/lib_core/: Cargo.toml
crates/libs/lib_core/benches/: plane_benchmark.rs  rk_benchmark.rs  trim_benchmark.rs
crates/libs/lib_core/src/: clock.rs  core.rs
crates/libs/lib_core/src/algorithm/: nelder_mead.rs  runge_kutta.rs
crates/libs/lib_core/src/parts/: block.rs  mod.rs  trim.rs
crates/libs/lib_core/src/parts/flight/: basic.rs  mod.rs  plane.rs
crates/libs/lib_plugin/: Cargo.toml
crates/libs/lib_plugin/src/: lib.rs
crates/libs/lib_plugin/src/include/: fr_model.h  fr_plugin.h
crates/libs/lib_plugin/src/model/: ffi.rs  model.rs
crates/libs/lib_plugin/src/plugin/: ffi.rs  plugin.rs
crates/modules/csv_viewer/: Cargo.toml  README.md
crates/modules/csv_viewer/src/: lib.rs
crates/modules/json_viewer/: Cargo.toml  README.md
crates/modules/json_viewer/src/: lib.rs
crates/modules/protobuf_viewer/: Cargo.toml  README.md  build.rs
crates/modules/protobuf_viewer/proto/: core_output.proto
crates/modules/protobuf_viewer/src/: lib.rs  model.rs
crates/modules/python_client/: Cargo.toml  flyruler_py_client.pyi
crates/modules/python_client/src/: lib.rs
crates/modules/tcp/: Cargo.toml  README.md
crates/modules/tcp/src/: lib.rs
crates/runtime/lua_runtime/: Cargo.toml  README.md
crates/runtime/lua_runtime/src/: lib.rs
crates/runtime/python_runtime/: Cargo.toml  README.md  python_runtime.pyi
crates/runtime/python_runtime/src/: control.rs  core_output.rs  lib.rs  plane_init_cfg.rs  plugin.rs  state.rs  state_extend.rs  sync.rs  uuid.rs
crates/systems/lua_system/: Cargo.toml  README.md
crates/systems/lua_system/src/: lib.rs  main.rs  system.rs
crates/systems/lua_system/src/manager/: model.rs  plugin.rs
crates/systems/rust_system/: Cargo.toml  config.lua
crates/systems/rust_system/src/: args.rs  encoder.rs  handler.rs  lib.rs  lua.rs  main.rs  system.rs
crates/systems/rust_system/src/manager/: mod.rs  model.rs
f16_model/: CMakeLists.txt  CMakelists.txt  F16Block.slxc  runF16Sim.m  trimfun.m
f16_model/data/: read.py
f16_model/include/: fly_ruler_ffi.h  fly_ruler_model_ffi.h  fly_ruler_system_ffi.h  fly_ruler_utils_ffi.h  fr_model.h  hifi_F16_AeroData.h  mexndinterp.h  nlplant.h  utils.h
f16_model/src/: fly_ruler_ffi.c  hifi_F16_AeroData.c  loadHead.py  lofi_F16_AeroData.c  mexndinterp.c  model.c  nlplant.c  system.c  utils.c
f16_model/tests/: test_hifi_loader.c  test_model.c  test_utils.c
f16_model/tests/include/: test_utils.h
fly_ruler_core/: Cargo.toml  plot.ipynb
fly_ruler_core/benches/: nm_benchmark.rs  plane_benchmark.rs  rk_benchmark.rs  trim_benchmark.rs
fly_ruler_core/src/: clock.rs  core.rs  lib.rs  trim.rs
fly_ruler_core/src/algorithm/: nelder_mead.rs  runge_kutta.rs
fly_ruler_core/src/model/: mod.rs  plant.rs
fly_ruler_core/src/parts/: basic.rs  block.rs  group.rs  mod.rs  module.rs  trim.rs
fly_ruler_core/src/parts/flight/: basic.rs  mod.rs  plane.rs  plant.rs
fly_ruler_extern/: Cargo.toml
fly_ruler_extern/fr_csv/: Cargo.toml
fly_ruler_ffi/: Cargo.toml  f16_model.lib
fly_ruler_ffi/include/: fr_model_ffi.h  fr_plugin_ffi.h  fr_system_ffi.h
fly_ruler_ffi/src/: lib.rs  main.rs  model.rs  model_ffi.rs  utils_ffi.rs
fly_ruler_ffi/src/model/: cmodel.rs  error.rs  ffi.rs  mod.rs
fly_ruler_ffi/src/plugin/: ffi.rs  mod.rs  plugin.rs
fly_ruler_interface/: Cargo.toml
fly_ruler_plugin/: .gitignore  Cargo.toml
fly_ruler_plugin/include/: fr_model.h  fr_plugin.h
fly_ruler_plugin/src/: lib.rs  manager.rs  system_ffi.rs
fly_ruler_plugin/src/include/: fr_model.h
fly_ruler_plugin/src/model/: ffi.rs  mod.rs  model.rs
fly_ruler_plugin/src/plugin/: ffi.rs  plugin.rs
fly_ruler_system/: Cargo.toml  main.lua
fly_ruler_system/src/: lib.rs  main.rs  system.rs
fly_ruler_system/src/config/: manager.rs  mod.rs
fly_ruler_system/src/controller/: mod.rs  stick.rs
fly_ruler_system/src/inputer/: mod.rs  stick.rs  tcp.rs
fly_ruler_system/src/manager/: config.rs  mod.rs  model.rs  plugin.rs
fly_ruler_system/src/outputer/: csv.rs  mod.rs  tcp.rs
fly_ruler_system/src/viewer/: csv.rs  mod.rs  tcp.rs
fly_ruler_utils/: Cargo.toml  build.rs  helper.ipynb
fly_ruler_utils/benches/: nm_benchmark.rs  rk_benchmark.rs  zip_sort_benchmark.rs
fly_ruler_utils/src/: error.rs  lib.rs  logger.rs
fly_ruler_utils/src/algorithm/: nelder_mead.rs  runge_kutta.rs
fly_ruler_utils/src/model/: matrix.rs  mod.rs  plant.rs  sync.rs  vector.rs
fly_ruler_utils/src/model/plane/: control.rs  core_output.rs  mod.rs  model_input.rs  model_output.rs  state.rs  state_extend.rs
fly_ruler_utils/src/model/plant/: core_output.rs  mod.rs  other.rs  state_extend.rs
lua_system/: 1.lua  client.lua  command.lua  config.lua  main.lua  utils.lua
proto/: command.proto  control.proto  core_output.proto  id.proto  plane_init_cfg.proto  plugin.proto  service.proto  state.proto  state_extend.proto
py_client/: main.py  test.ps1
test/test_client/: Cargo.toml
test/test_client/src/: main.rs  system.rs
uml/: block.puml  clock.puml  model.puml  panel.puml  plane.puml  plugin.puml  plugin_manager.puml  rpc.puml  rpcclient.puml  server.puml  server_state.puml  service.puml  system.puml
(+165 files in other folders)
