[workspace]
resolver = "2"
members = [
    # Application libraries
    "crates/libs/lib_core",
    "crates/libs/lib_plugin",
    "crates/libs/lib_utils",

    # Application binaries
    "crates/systems/lua_system",

    # Application modules
    "crates/modules/csv_viewer",
    "crates/modules/json_viewer",
    "crates/modules/protobuf_viewer",
    "crates/modules/tcp",

    # Application runtime
    "crates/runtime/lua_runtime",

    # Application tools
]
