[workspace]
resolver = "2"
members = [
    # Application libraries
    "crates/libs/lib_core",
    "crates/libs/lib_plugin",
    "crates/libs/lib_codec",
    "crates/libs/lib_utils",

    # Application binaries
    "crates/engines/universal_simulation_engine",
    "crates/engines/light_simulation_engine",

    # Application tests
    "test/test_client",

    # Application modules
    # "crates/modules/use_py_client",

    # Application runtime
    "crates/runtime/lua_runtime",
    # "crates/runtime/python_runtime",
]
