[package]
name = "fly_ruler_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.1"
log = "0.4.20"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
serde_toml = "0.0.1"
tokio = "1.34.0"
rayon = "1.8.0"
fly_ruler_utils = { path = "../fly_ruler_utils" }
fly_ruler_plugin = { path = "../fly_ruler_plugin" }
csv = "1.3.0"
lazy_static = "1.4.0"

[dev-dependencies]
criterion = "0.5.1"
rand = "0.8.5"
tokio-test = "*"

[lib]
bench = false

[[bench]]
name = "nm_benchmark"
harness = false

[[bench]]
name = "rk_benchmark"
harness = false

[[bench]]
name = "trim_benchmark"
harness = false
