[package]
name = "fly_ruler_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.20"
tokio = { version = "1.35.0", features = ["sync", "rt", "time"] }
rayon = "1.8.0"
fly_ruler_utils = { path = "../fly_ruler_utils" }
fly_ruler_plugin = { path = "../fly_ruler_plugin" }
serde = { version = "1.0.193", features = ["derive"] }
tokio-util = "0.7.10"

[dev-dependencies]
criterion = "0.5.1"
rand = "0.8.5"
csv = "1.3.0"
tokio-test = "*"
tokio.features = ["test-util", "macros"]

[lib]
bench = false

[[bench]]
name = "nm_benchmark"
harness = false

[[bench]]
name = "rk_benchmark"
harness = false

[[bench]]
name = "trim_benchmark"
harness = false
