[package]
name = "fly_ruler_ffi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fly_ruler_utils = { path = "../fly_ruler_utils" }
libc = "0.2.151"
libloading = "0.8.1"
log = "0.4.20"
serde = { version = "1.0.193", features = ["derive"] }
toml = "0.8.8"
