[package]
name = "fly_ruler_system"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.1"
stick = "0.13.0"
log = "0.4.20"
tokio = { version = "1.35.1", features = ["sync", "macros", "net"] }
serde = { version = "1.0.193", features = ["derive"] }
fly_ruler_utils = { path = "../fly_ruler_utils" }
fly_ruler_plugin = { path = "../fly_ruler_plugin" }
fly_ruler_core = { path = "../fly_ruler_core" }
serde_json = "1.0.108"
toml = "0.8.8"
mlua = { version = "0.9.6", features = [
    "lua54",
    "async",
    "vendored",
    "serialize",
] }
async-trait = "0.1.77"
