[package]
name = "fly_ruler_utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.1"
log = "0.4.20"
serde = { version = "1.0.193", features = ["derive"] }
tokio = { version = "1.35.0", features = ["sync"] }
rayon = "1.8.0"
tokio-util = "0.7.10"
prost = "0.12.1"
async-trait = "0.1.77"
mlua = { version = "0.9.6", features = ["async", "lua54"] }

[build-dependencies]
prost-build = "0.12.1"

[dev-dependencies]
criterion = "0.5.1"
rand = "0.8.5"

[[bench]]
name = "zip_sort_benchmark"
harness = false
