[package]
name = "test_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.1"
log = "0.4.20"
tokio = { version = "1.35.1", features = ["sync", "net", "rt", "io-util"] }
serde = { version = "1.0.193", features = ["derive"] }
toml = "0.8.8"
serde_json = "1.0.114"
lazy_static = "1.4.0"
fly_ruler_utils = { path = "../../crates/libs/lib_utils" }
fly_ruler_plugin = { path = "../../crates/libs/lib_plugin" }
fly_ruler_core = { path = "../../crates/libs/lib_core" }

[dependencies.uuid]
version = "1.7.0"
features = ["v4", "fast-rng", "macro-diagnostics"]
