[package]
name = "test_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.11.3"
log = "0.4.20"
tokio = { version = "1.35.1", features = ["sync", "net", "rt"] }
serde = { version = "1.0.193", features = ["derive"] }
fly_ruler_utils = { path = "../../crates/libs/lib_utils" }
fly_ruler_plugin = { path = "../../crates/libs/lib_plugin" }
fly_ruler_core = { path = "../../crates/libs/lib_core" }
fly_ruler_codec = { path = "../../crates/libs/lib_codec" }
tokio-util = { version = "0.7.10", features = ["codec"] }
futures-util = { version = "0.3.30", features = ["sink"] }

[dependencies.uuid]
version = "1.7.0"
features = ["v4", "fast-rng", "macro-diagnostics"]
