[package]
name = "universal_simulation_engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.35.1", features = [
    "sync",
    "net",
    "rt",
    "io-util",
    "rt-multi-thread",
    "macros",
] }
serde = { version = "1.0.193", features = ["derive"] }
mlua = { version = "0.9.6", features = [
    "lua54",
    "async",
    "serialize",
    "vendored",
] }
fly_ruler_core = { path = "../../libs/lib_core" }
fly_ruler_plugin = { path = "../../libs/lib_plugin" }
fly_ruler_codec = { path = "../../libs/lib_codec" }
fly_ruler_utils = { path = "../../libs/lib_utils" }
clap = { version = "4.5.3", features = ["derive"] }
once_cell = "1.19.0"
thiserror = "1.0.58"
anyhow = "1.0.81"
tokio-util = { version = "0.7.10", features = ["codec"] }
futures-util = { version = "0.3.30", features = ["sink"] }
tracing = "0.1.40"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing-appender = "0.2.3"

[dependencies.uuid]
version = "1.7.0"
features = ["v4", "fast-rng", "macro-diagnostics"]
