[package]
name = "fly_ruler_codec"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.20"
serde = { version = "1.0.193", features = ["derive"] }
prost = "0.12.1"
serde_json = "1.0.114"
fly_ruler_utils = { path = "../../libs/lib_utils" }

[build-dependencies]
prost-build = "0.12.1"
