[package]
name = "fly_ruler_codec"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.193", features = ["derive"] }
prost = "0.12.1"
fly_ruler_plugin = { path = "../../libs/lib_plugin" }
fly_ruler_utils = { path = "../../libs/lib_utils" }
fly_ruler_core = { path = "../../libs/lib_core" }
tokio-util = { version = "0.7.10", features = ["codec"] }

[dependencies.uuid]
version = "1.7.0"
features = ["v4", "fast-rng", "macro-diagnostics"]

[build-dependencies]
prost-build = "0.12.1"
