[package]
name = "fly_ruler_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.35.1", features = [
    "sync",
    "rt",
    "time",
    "rt-multi-thread",
] }
rayon = "1.8.0"
fly_ruler_utils = { path = "../lib_utils" }
fly_ruler_plugin = { path = "../lib_plugin" }
serde = { version = "1.0.193", features = ["derive"] }
tracing = "0.1.40"
async-trait = "0.1.79"

[dependencies.uuid]
version = "1.7.0"
features = ["v4", "fast-rng", "macro-diagnostics"]

[dev-dependencies]
criterion = "0.5.1"
rand = "0.8.5"
csv = "1.3.0"
tokio-test = "*"
tokio = { version = "1.35.1", features = ["test-util", "macros"] }

[lib]
bench = false

[[bench]]
name = "nm_benchmark"
harness = false

[[bench]]
name = "rk_benchmark"
harness = false

[[bench]]
name = "trim_benchmark"
harness = false

[[bench]]
name = "plane_benchmark"
harness = false
