[package]
name = "json_viewer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "json_viewer"
crate-type = ["cdylib"]

[dependencies]
mlua = { version = "0.9.6", features = ["lua54", "module"] }
fly_ruler_utils = { path = "../../libs/lib_utils" }
lua_runtime = { path = "../../runtime/lua_runtime" }
serde_json = "1.0.114"
serde = { version = "1.0.197", features = ["derive"] }
