[package]
name = "fly_ruler_py_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "flyruler_py_client"
crate-type = ["cdylib"]

[dependencies]
python_runtime = { path = "../../runtime/python_runtime" }
fly_ruler_utils = { path = "../../libs/lib_utils" }
fly_ruler_codec = { path = "../../libs/lib_codec" }
tokio = { version = "1.35.1", features = [
  "sync",
  "net",
  "rt",
  "rt-multi-thread",
] }
pyo3 = { git = "https://github.com/PyO3/pyo3.git", branch = "main", features = [
  "extension-module",
  "experimental-async",
  "serde",
] }
anyhow = "1.0.81"
futures = "0.3.30"
lazy_static = "1.4.0"
tokio-util = { version = "0.7.10", features = ["codec"] }
futures-util = { version = "0.3.30", features = ["sink"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing-appender = "0.2.3"
