[package]
name = "tcp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "tcp"
crate-type = ["cdylib"]

[dependencies]
futures = "0.3.30"
lazy_static = "1.4.0"
mlua = { version = "0.9.6", features = ["lua54", "module", "async", "send"] }
tokio = { version = "1.35.1", features = ["net", "io-util", "rt"] }
