[package]
name = "lua_runtime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mlua = { version = "0.9.6", features = ["async", "lua54", "serialize"] }
fly_ruler_utils = { path = "../../libs/lib_utils" }

[dependencies.uuid]
version = "1.7.0"
features = ["v4", "fast-rng", "macro-diagnostics"]
