[package]
name = "python_runtime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pyo3 = { git = "https://github.com/PyO3/pyo3.git", branch = "main", features = [
  "macros",
  "experimental-async",
  "serde",
] }
fly_ruler_utils = { path = "../../libs/lib_utils" }
fly_ruler_plugin = { path = "../../libs/lib_plugin" }
fly_ruler_codec = { path = "../../libs/lib_codec" }
fly_ruler_core = { path = "../../libs/lib_core" }

[dependencies.uuid]
version = "1.7.0"
features = ["v4", "fast-rng", "macro-diagnostics"]
