[package]
name = "lua_system"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.1"
log = "0.4.20"
tokio = { version = "1.35.1", features = ["sync", "macros", "net"] }
serde = { version = "1.0.193", features = ["derive"] }
fly_ruler_utils = { path = "../../libs/lib_utils" }
fly_ruler_plugin = { path = "../../libs/lib_plugin" }
fly_ruler_core = { path = "../../libs/lib_core" }
lua_runtime = { path = "../../runtime/lua_runtime" }
toml = "0.8.8"
mlua = { version = "0.9.6", features = ["lua54", "async", "serialize"] }
